# armor_ws

./: README.md
armor_detector/: CMakeLists.txt  package.xml
armor_detector/io/: camera.cpp  camera.hpp
armor_detector/src/: armor_detector_node.cpp
armor_detector/tasks/: detector.cpp  detector.hpp
camera_info_publisher/: CMakeLists.txt  package.xml
camera_info_publisher/src/: camera_info_publisher.cpp
video_publisher/: CMakeLists.txt  package.xml
video_publisher/src/: video_publisher.cpp
